--- a/literature-review/Makefile
+++ b/literature-review/Makefile
@@ -1,15 +1,19 @@
-.PHONY: all build run clean
+.PHONY: all build run clean docker
 
-all: build run
+all: run
 
 build:
+	docker build -t lit .
+	docker create --name lit lit
+
+run:
+	docker run -v $(PWD):/app lit /bin/bash -c "make docker && find . -type f -print | grep -E '^./main.(aux|bbl|blg|log|out)$$' | xargs rm"
+
+clean:
+	docker rm lit
+
+docker:
 	pdflatex main.tex
 	bibtex main
 	pdflatex main.tex
 	pdflatex main.tex
-
-run:
-	open main.pdf
-
-clean:
-	find . -type f -print | grep -E '^./main.(aux|bbl|blg|log|out)$$' | xargs rm
