Added relative paths for windows

--- a/literature-review/Makefile
+++ b/literature-review/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all build run clean docker
+.PHONY: all build run windows clean docker
 
 all: run
 
@@ -8,6 +8,10 @@ build:
 
 run:
 	docker run -v $(PWD):/app lit /bin/bash -c "make docker && find . -type f -print | grep -E '^./main.(aux|bbl|blg|log|out)$$' | xargs rm"
+
+windows:
+	docker run -v ${PWD}:/app lit /bin/bash -c "make docker && find . -type f -print | grep -E '^./main.(aux|bbl|blg|log|out)$$' | xargs rm"
+
 
 clean:
 	docker rm lit
